--- a/Develop/index.html
+++ b/Develop/index.html
@@ -10,7 +10,7 @@
 <body>
     <header>
         <h1>Hori<span class="seo">seo</span>n</h1>
-        <article>
+        <div>
             <ul>
                 <li>
                     <a href="#search-engine-optimization">Search Engine Optimization</a>
@@ -22,10 +22,10 @@
                     <a href="#social-media-marketing">Social Media Marketing</a>
                 </li>
             </ul>
-        </article>
+        </div>
     </header>
 
-    <section id="hero">
+    <section id="hero" title="picture of professionals collaborated around a conference table">
     </section>
 
     <section id="content">
